<resources>
    <string name="app_name">fanzania</string>
    <string name="text_facebook_app_id">347301449756008</string>
    <string name="text_fanzanialogin">Login</string>
    <string name="text_emailaddress">Email Address</string>
    <string name="text_password">Password</string>
    <string name="text_forgotpass">Forgot Password?</string>
    <string name="text_signin">Login</string>
    <string name="text_pay">Pay</string>
    <string name="text_clickheretosignup">Sign Up</string>
    <string name="text_country">Country</string>
    <string name="text_select_team">Select Team</string>
    <string name="text_supported_team">Supported Team</string>
    <string name="text_confirmpassword">Confirm Password</string>
    <string name="text_signup">Sign Up</string>
    <string name="text_termsconditiontext">By registering, I accept to fanzania\'s</string>
    <string name="text_selectcountry">Select Country</string>
    <string name="text_email_not_valid">Email is not valid</string>
    <string name="text_email_is_blank">Email is required.</string>
    <string name="text_fnmae_required">First name is required.</string>
    <string name="text_password_must_have">Password must have at least 8 characters.</string>
    <string name="text_password_field_is_blank">Password field is blank.</string>
    <string name="text_placeisblank">Place is blank</string>
    <string name="text_passwordnotmatched"> Passwords do not match.</string>
    <string name="text_phone">Phone</string>
    <string name="font_Light">Montserrat_Light</string>
    <string name="font_Regular">Montserrat_Regular</string>
    <string name="font_Medium">Montserrat_Medium</string>
    <string name="title_home">Home</string>
    <string name="title_myleague">My League</string>
    <string name="title_livescore">Live Score</string>
    <string name="title_myteam">My Team</string>
    <string name="title_myprofile">My Profile</string>
    <string name="title_aboutus">About Us</string>
    <string name="title_faqs">FAQs</string>
    <string name="title_gamerule">Game Rules</string>
    <string name="title_termscondition"><![CDATA[Terms & Conditions]]></string>
    <string name="title_signout">Sign Out</string>
    <string name="title_kyc">KYC Verification</string>
    <string name="title_myleagues">My Leagues</string>
    <string name="text_globalrank1">Global Rank</string>
    <string name="text_totallpoint">Total Points</string>
    <string name="tetx_name">Name</string>
    <string name="tetx_globalleaguerank">League Rank</string>
    <string name="text_jointournaments">Join Tournaments</string>
    <string name="text_email">Email</string>
    <string name="text_forgotpasswordtext1">Enter your registered Email address for verification.</string>
    <string name="text_newpassword">New Password</string>
    <string name="text_retrivepassword">Retrieve Password</string>
    <string name="text_dob">Date of Birth</string>
    <string name="text_save">Save</string>
    <string name="text_clear_all">Clear All</string>
    <string name="text_currentpassword">Current Password</string>
    <string name="text_changepassword">Change Password</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="text_share">Share</string>
    <string name="text_rateus">Rate Us</string>
    <string name="text_communicate">Communicate</string>
    <string name="text_yes">Yes</string>
    <string name="text_No">No</string>
    <string name="text_logout">Sign Out</string>
    <string name="text_signouttext">Are you sure you want to sign out ?</string>
    <string name="text_mypointhistory">My Point History</string>
    <string name="text_mytournament">My Tournament</string>
    <string name="text_myteam">My Team</string>
    <string name="text_mypoints">My Points</string>
    <string name="text_totalpoints">Total Points</string>
    <string name="text_mypointbreak">My Point Breakdown</string>
    <string name="text_leaguestats">League Stats</string>
    <string name="text_rank">Rank</string>
    <string name="text_owner">Owner</string>
    <string name="text_transferpending">Transfers</string>
    <string name="text_supportedteam">Supported Team</string>
    <string name="text_points">Points</string>
    <string name="title_manageleague">Manage League</string>
    <string name="text_joinleagueheader">Enter the league code. We will notify the league admin about your request to join.</string>
    <string name="text_join">Join</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_appshare">Welcome to fanzania ! We strive to offer a fun-filled, exciting and rewarding playing experience.\n\nDownload the fanzania Android app from Google Play store:\n</string>
    <string name="text_appshare3">\n\nfanzania Team\nwww.fanzania.com</string>
    <string name="text_appshare4">\n\nWhile SignUp\nUse Refferal Code:</string>
    <string name="text_leaguename">League Name</string>
    <string name="text_newleague">Give your league a nice catchy name.</string>
    <string name="text_create">Create</string>
    <string name="text_exitleague">Exit League?</string>
    <string name="text_exitleague1">Exit League</string>
    <string name="text_exitleaguetext">Are you sure want to exit from this league?</string>
    <string name="text_vs">vs</string>
    <string name="text_filterbyteam">Filter by Team</string>
    <string name="text_budget">Budget</string>
    <string name="text_transfer">Transfers</string>
    <string name="text_transfer_used">Transfers/Used</string>
    <string name="text_searchby">Search here</string>
    <string name="text_playerlist">Player List</string>
    <string name="text_role">Role</string>
    <string name="text_player">Player</string>
    <string name="text_team">Team</string>
    <string name="text_price">Price</string>
    <string name="text_done">Done</string>
    <string name="text_painkiller">Pain Killer</string>
    <string name="title_mytournamenthome">Home</string>
    <string name="text_nitro">Nitro</string>
    <string name="text_nitros">Nitro</string>
    <string name="text_autocaptain">Ultra Capt</string>
    <string name="tetx_myteamstanding">My Standing</string>
    <string name="title_team">Team</string>
    <string name="title_league">League</string>
    <string name="title_profile">Profile</string>
    <string name="text_saveteam">Save Team</string>
    <string name="title_manageteam">Manage Team</string>
    <string name="title_createtam">Create Team</string>
    <string name="text_enterteamname">Enter Team name</string>
    <string name="text_continue">Continue</string>
    <string name="text_errorplaceisblank">Place is blank</string>
    <string name="fanzanianotification">fanzania Notification</string>
    <string name="text_loginsuccess">Login successful.</string>
    <string name="text_retry">Retry</string>
    <string name="text_nonetwork">No network available.</string>
    <string name="text_registrationsuccess">Please check this verification code in your registered email including spam or junk folder.</string>
    <string name="text_passwordsuccess">Password has been changed successfully.</string>
    <string name="text_resend">Resend</string>
    <string name="text_enterverificationcode">Please check this verification code in your registered email including spam or junk folder.</string>
    <string name="title_verification">Verification</string>
    <string name="text_name">Name</string>
    <string name="text_emailexists">Email already exists</string>
    <string name="text_verificationcodenotvalid">Verification code is not valid.</string>
    <string name="text_activeyouremail">Please verify your email first.</string>
    <string name="text_submit">Submit</string>
    <string name="text_emailnotexists">This email address is not registered.</string>
    <string name="text_loading">Loading..</string>
    <string name="text_currentpassnotmatch">Current password is not correct.</string>
    <string name="text_noleagueavailable">No league available.</string>
    <string name="text_noteamavailable">No team available</string>
    <string name="title_teamstats">Team Stats</string>
    <string name="text_profiledetailsupdated">Profile details updated.</string>
    <string name="text_kycdetailsupdated">KYC details updated.</string>
    <string name="text_subscriptiondetailsupdated">Subscription details updated.</string>
    <string name="text_pandetailsupdated">PAN image updated.</string>
    <string name="text_shareleaguetxt1">You have been invited to join a fanzania league</string>
    <string name="text_shareleaguetxt2">by the league admin.\n\nUse the following code to join the league.\n\n\</string>
    <string name="text_shareleaguetxt3">League code :</string>
    <string name="text_shareleaguetxt4">\n\nAndroid :\n</string>
    <string name="tetx_lagues">Leagues</string>
    <string name="text_powerplay">Power Play</string>
    <string name="title_Teamrule">Team Rule</string>
    <string name="text_playerselectionlimit">Player selection limit exceeded.</string>
    <string name="text_outofbudget">Out of budget.</string>
    <string name="text_autofill">Auto Fill</string>
    <string name="text_reset">Reset</string>
    <string name="text_pleaseselectallplayers">Please select all players.</string>
    <string name="text_chooseaction">Choose Action</string>
    <string name="text_editplayer">Replace</string>
    <string name="text_savechanged">Change(s) saved successfully.</string>
    <string name="text_teamnameexists">Team name already exists.</string>
    <string name="text_donthaveenoughtransfer">You have not enough tranfers.</string>
    <string name="text_wicketkeeperlimitexceed">WicketKeeper limit exceeded.</string>
    <string name="text_batsmanlimitexceed">Batsman limit exceeded.</string>
    <string name="text_bowlerlimitexceed">Bowler limit exceeded.</string>
    <string name="text_allrounderlimitexceed">AllRounder limit exceeded.</string>
    <string name="text_minimum">Minimum</string>
    <string name="text_wicketkeeperrequired">WicketKeeper.</string>
    <string name="text_maxsameplayer">Maximum player limit from same team is</string>
    <string name="text_maxoverseasplayer">Maximum overseas player limit is</string>
    <string name="text_pleaseselectcapt">Oops. Please pick your captain by sliding player\'s row from right to left.</string>
    <string name="text_pleaseselectcapt_tournament">Please select your captain.</string>
    <string name="text_pleaseselectvcapt">Oops. Please pick your vice captain by sliding player\'s row from right to left.</string>
    <string name="text_pleaseselectvcapt_tournament">Please select your vice captain.</string>
    <string name="text_logouttext">You have been signed out successfully</string>
    <string name="text_contactus">Contact Us</string>
    <string name="text_batman">batsman</string>
    <string name="text_bowlerr">bowler</string>
    <string name="text_live">Live</string>
    <string name="text_mymatches">My Matches</string>
    <string name="text_noupcomingmatches">No upcomig matchs.</string>
    <string name="text_all">All</string>
    <string name="text_completed">Completed</string>
    <string name="text_upcoming">Upcoming</string>
    <string name="text_matchpoint">Points</string>
    <string name="text_wallet">Wallet</string>
    <string name="text_subcription">Subscription</string>
    <string name="title_notification">Notification</string>
    <string name="text_sr">SR</string>
    <string name="text_6s">6s</string>
    <string name="text_4s">4s</string>
    <string name="text_b">B</string>
    <string name="text_r">R</string>
    <string name="text_o">O</string>
    <string name="text_m">M</string>
    <string name="text_w">W</string>
    <string name="text_er">ER</string>
    <string name="text_referfriends">Refer Friends</string>
</resources>