<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:weightSum="10">

    <com.yorker.fanzania.customviews.customfonts.montserrat.MontserratMedium
        android:id="@+id/tvBatsman"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:text="@string/text_batman"
        android:textAllCaps="true"
        android:textColor="@color/colorTextHint"
        android:textSize="16sp" />

    <com.yorker.fanzania.customviews.customfonts.montserrat.MontserratMedium
        android:id="@+id/tvR"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.2"
        android:gravity="center"
        android:text="@string/text_r"
        android:textAllCaps="true"
        android:textColor="@color/colorTextHint"
        android:textSize="16sp" />

    <com.yorker.fanzania.customviews.customfonts.montserrat.MontserratMedium
        android:id="@+id/tvB"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.2"
        android:gravity="center"
        android:text="@string/text_b"
        android:textAllCaps="true"
        android:textColor="@color/colorTextHint"
        android:textSize="16sp" />

    <com.yorker.fanzania.customviews.customfonts.montserrat.MontserratMedium
        android:id="@+id/tv4S"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.2"
        android:gravity="center"
        android:text="@string/text_4s"
        android:textAllCaps="true"
        android:textColor="@color/colorTextHint"
        android:textSize="16sp" />

    <com.yorker.fanzania.customviews.customfonts.montserrat.MontserratMedium
        android:id="@+id/tv6S"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.2"
        android:gravity="center"
        android:text="@string/text_6s"
        android:textAllCaps="true"
        android:textColor="@color/colorTextHint"
        android:textSize="16sp" />

    <com.yorker.fanzania.customviews.customfonts.montserrat.MontserratMedium
        android:id="@+id/tvSR"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.2"
        android:gravity="center"
        android:text="@string/text_sr"
        android:textAllCaps="true"
        android:textColor="@color/colorTextHint"
        android:textSize="16sp" />
</LinearLayout>