<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <LinearLayout
        android:id="@+id/clHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        >

        <com.yorker.fanzania.customviews.customfonts.montserrat.MontserratRegular
            android:id="@+id/tvRank"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/text_rank"
            android:textColor="@color/colorText"
            android:textSize="12sp"
            />
        <com.yorker.fanzania.customviews.customfonts.montserrat.MontserratRegular
            android:id="@+id/tvTeam"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:gravity="center"
            android:text="@string/text_owner"
            android:textColor="@color/colorText"
            android:textSize="12sp"
            />

        <com.yorker.fanzania.customviews.customfonts.montserrat.MontserratRegular
            android:id="@+id/tvMatchPoints"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/text_matchpoint"
            android:textColor="@color/colorText"
            android:textSize="12sp"
            />
    </LinearLayout>
</layout>